# pyflysight

./: .bumper.toml  .bumpversion.cfg  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tox.ini  zensical.toml
.github/workflows/: lint_test.yml  pypi_release.yml  static.yml
doc/: data_format.md
docs/user_guide/: cli.md  data_format.md  device_configuration.md  device_interaction.md  log_parsing.md  log_utilities.md  trim_app.md
html/pyflysight/: cli.html  config_params.html  config_utils.html  flysight_proc.html  flysight_utils.html  index.html  log_utils.html  trim_app.html
pyflysight/: __init__.py  cli.py  config_params.py  config_utils.py  exceptions.py  flysight_proc.py  flysight_utils.py  fw_api.py  log_utils.py  trim_app.py
pyflysight/proc_helper/: alt_loss.py
tests/: __init__.py  checks.py  conftest.py  test_cli.py  test_config_utils.py  test_csv_export.py  test_data_filter.py  test_firmware_api.py  test_flight_log_export.py  test_flysight_utils.py  test_flysight_v1_parser.py  test_flysight_v2_parser.py  test_log_trim.py  test_log_utils.py  test_parser.py
tests/sample_data/: 21-04-20.CSV
tests/sample_data/24-04-20/04-20-00/: SENSOR.CSV
tests/sample_data/config/: CONFIG.TXT  GENERATED_DEFAULT_CONFIG.TXT
tests/test_data/: 21-05-20.CSV
tests/test_data/24-01-01/04-20-00/003e0038484e501420353131/3e10c2f6b1ea4604758b8926/: device_info.json
tests/test_data/24-04-20/04-20-00/: SENSOR.CSV  TRACK.CSV
tests/test_data/24-04-20/04-20-00/003e0038484e501420353131/3e10c2f6b1ea4604758b8926/: IMU.CSV  TIME.CSV  TRACK.CSV
tests/test_data/bad_row/: SENSOR.CSV
tests/test_data/config/: ALARM_WINDOW_SAMPLE.TXT  FLYSIGHT.TXT  GENERATED_V1_DEFAULT_CONFIG.TXT  GENERATED_V2_DEFAULT_CONFIG.TXT
tests/test_data/firmware_api/: sample_firmware_response_with_beta.json
